fix navbar z-index so it's on top of everything but the x

--- a/src/components/sass/header.sass
+++ b/src/components/sass/header.sass
@@ -47,6 +47,7 @@
       width: $container-width-mobile
       .hamburger-menu.is-active
         margin-right: 0px
+        z-index: 3
       .is-active
         .bar1, .bar2, .bar3
           background: white
