--- a/src/components/sass/navbar.sass
+++ b/src/components/sass/navbar.sass
@@ -6,7 +6,7 @@
   padding-top: 26px // align list with the header text
   margin: 0px
   background: $red
-  z-index: 1
+  z-index: 2
   transition: 0.5s /* 0.5 second transition effect to slide in the navbar */
   &.is-active
     width: 400px
